Fixed overlap found during testing

--- a/static/style.css
+++ b/static/style.css
@@ -36,7 +36,7 @@ body {
 #left {
 	padding:10px 10px 10px 10px;
 	background-color:white;
-	width:60%;
+	width:55%;
 	float:left;
 	border-color:#81B953;
 	border-width:2px;
